--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>org.fenixedu</groupId>
 	<artifactId>employer</artifactId>
-	<version>1.0.0</version>
+	<version>1.1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<properties>
@@ -32,7 +32,7 @@
 		<connection>scm:git:git@github.com:FenixEdu/employer.git</connection>
 		<developerConnection>scm:git:git@github.com:FenixEdu/employer.git</developerConnection>
 		<url>http://fenixedu.org</url>
-		<tag>v1.0.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<dependencies>
